<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:paddingEnd="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingStart="8dp"
    android:id="@+id/list_item_linear">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:id="@+id/SalaatNameTextView"
        android:hint="@string/salaat_name_hint"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/jamaat"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/begins"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:orientation="vertical"
        android:id="@+id/ChildVertLinearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/salaatJamaatTimeTextView"
            android:hint="@string/jamaat_time_hint"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/salaatBeginTimeTextView"
            android:hint="@string/begin_time_hint"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>